<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_calibration</name>
  <version>1.0.0</version>
  <description>AMS Exercise 4 solution for OpenCV camera calibration, live pose estimation, and ROS2/RViz2 visualization.</description>
  <maintainer email="luiangalvgil2@gmail.com">Luis Alvarez</maintainer>
  <license>Academic coursework</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
