<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icp_scan_matching</name>
  <version>1.0.0</version>
  <description>2D ICP scan matching and accumulated meta-scan publisher for AMS Exercise 9.</description>
  <maintainer email="luiangalvgil2@gmail.com">Luis Alvarez</maintainer>
  <license>Academic coursework</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
