<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_build</name>
  <version>1.0.0</version>
  <description>ROS2 laser-scan occupancy-grid mapping with known odometry poses for AMS Exercise 8.</description>
  <maintainer email="luiangalvgil2@gmail.com">Luis Alvarez</maintainer>
  <license>Academic coursework</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

